--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,16 @@
   font-size: 20px;
   font-weight: bold;
   color: white;
+  cursor: pointer;
 }
 
 /* Main style */
 
 header {
   background-color: #FFF8F3;
+  background-image: url(../images/developer.png), url(../images/header_bg.png), #FFF8F3;
+  background-position: left top, bottom right;
+  background-repeat: no-repeat;
   padding-top: 50px;
 }
 
@@ -54,4 +58,42 @@ nav .menu a {
   font-size: 20px;
   color: #474747;
   text-decoration: none;
+}
+
+/* Banner */
+
+#banner {
+  /* border: 1px solid red; */
+  margin: 46px 38px 0px 230px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#banner .banner-content {
+  max-width: 585px;
+}
+
+#banner .banner-content h2{
+  font-size: 45px;
+  font-weight: 600;
+  color: #474747;
+  margin-bottom: 5px;
+}
+#banner .banner-content h1 {
+  font-size: 85px;
+  font-weight: bold;
+  color: #181818;
+  margin-bottom: 20px;
+}
+#banner .banner-content p {
+  font-size: 18px;
+  line-height: 30px;
+  color: #757575;
+  margin-bottom: 30px;
+}
+
+#banner .banner-image {
+  max-width: 584px;
+  vertical-align: middle;
 }
