--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@
 .section-heading {
   max-width: 827px;
   text-align: center;
+  margin: 0px auto;
 }
 
 .section-heading h2 {
@@ -43,6 +44,8 @@
   color: #757575;
   margin-bottom: 30px;
 }
+
+
 /* Main style */
 
 header {
@@ -140,4 +143,39 @@ nav .menu a {
   line-height: 30px;
   color: #474747;
   font-weight: bold;
+}
+
+/* Skills */
+
+#skills{
+  padding-top: 130px;
+}
+#skills .skills-container{
+  width: 75%;
+  max-width: 1140px;
+  margin: 0px auto;
+}
+#skills .skills-container .skill-box{
+  display: flex;
+  gap: 24px;
+}
+.skill-box .skill-card{
+  padding: 30px;
+  box-shadow: 0px 6px 50px 0px #0000003f;
+  max-width: 267px;
+}
+.skill-card img{
+  max-width: 44px;
+  margin-bottom: 30px;
+}
+.skill-card h3 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.skill-card p{
+  font-size: 16px;
+  line-height: 28px;
+  color: #757575;
 }
