--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@
 
 header {
   background-color: #FFF8F3;
-  background-image: url(../images/developer.png), url(../images/header_bg.png), #FFF8F3;
-  background-position: left top, bottom right;
+  background-image: url(../images/developer.png) , url(../images/header_bg.png);
+  background-position: top left, right bottom;
   background-repeat: no-repeat;
   padding-top: 50px;
 }
@@ -118,7 +118,7 @@ nav .menu a {
 
 /* About */
 
-#about {
+#about ,#skills, #resume{
   padding-top: 130px;
 }
 #about .about-container {
@@ -147,9 +147,6 @@ nav .menu a {
 
 /* Skills */
 
-#skills{
-  padding-top: 130px;
-}
 #skills .skills-container{
   width: 75%;
   max-width: 1140px;
@@ -175,6 +172,46 @@ nav .menu a {
   margin-bottom: 20px;
 }
 .skill-card p{
+  font-size: 16px;
+  line-height: 28px;
+  color: #757575;
+}
+
+/* Resume */
+
+#resume .resume-container{
+  width: 75%;
+  max-width: 1140px;
+  margin: 113px auto 0;
+  display: flex;
+  gap: 24px;
+}
+.resume-container hr {
+  margin: 30px 0;
+}
+.resume-container .section-title{
+ font-size:25px;
+ font-weight: bold;
+ color: #474747;
+ margin-bottom: 30px;
+}
+.resume-card{
+  width: 511px;
+  margin-right: 47px;
+}
+.resume-card .card-title {
+  font-size: 25px;
+  font-weight: bold;
+  color: #474747;
+  margin-bottom: 10px;
+}
+.resume-card .card-info {
+  font-size: 20px;
+  font-weight: 600;
+  color: #757575;
+  margin-bottom: 20px;
+}
+.resume-card .card-text {
   font-size: 16px;
   line-height: 28px;
   color: #757575;
